Fix vertical alignment

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-html {
+body {
+  margin: 0;
   background-color: darkolivegreen;
   color: aliceblue;
 }
 
 .container {
   display: flex;
+  min-height: 100vh;
   justify-content: center;
+  align-items: center;
 }
 
 .grid {
